--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,7 @@
 /e export-ignore
 /f export-ignore
 /m export-ignore
+
+# https://github.com/github/linguist/#how-linguist-works
+*.html linguist-vendored
+*.css linguist-vendored
