--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,5 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-*.html export-ignore
-*.md export-ignore
-/a export-ignore
-/b export-ignore
-/c export-ignore
-/d export-ignore
-/e export-ignore
-/f export-ignore
-/m export-ignore
-
+*.* export-ignore
+/* export-ignore
 # https://github.com/github/linguist/#using-gitattributes
-*.html linguist-documentation
-*.css linguist-documentation
+*.* linguist-documentation
+
